--- a/app/src/main/res/layout/activity.xml
+++ b/app/src/main/res/layout/activity.xml
@@ -5,10 +5,11 @@ android:gravity="center"
 android:orientation="vertical" >
 
     <TextView
+        android:id="@+id/question_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="24dp"
-        android:text="@string/question_text" />
+        android:text="@string/question_text_1" />
 
     <LinearLayout
         android:layout_width="wrap_content"
