--- a/app/src/main/res/layout-land/activity_escola_vision.xml
+++ b/app/src/main/res/layout-land/activity_escola_vision.xml
@@ -1,44 +1,48 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:gravity="center"
-android:orientation="vertical" >
+android:layout_height="match_parent" >
 
     <TextView
         android:id="@+id/question_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:padding="24dp"
         android:text="@string/question_text_1"
-        android:textSize="21sp" />
+        android:textAlignment="center"
+        android:textSize="30sp" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+	android:layout_gravity="center_vertical|center_horizontal"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/boton1"
-            android:layout_width="103dp"
+            android:layout_width="222dp"
             android:layout_height="match_parent"
+	    android:layout_gravity="bottom|right"
             android:text="@string/button1" />
 
         <Button
             android:id="@+id/boton2"
-            android:layout_width="103dp"
+            android:layout_width="222dp"
             android:layout_height="match_parent"
             android:text="@string/button2" />
 
         <Button
             android:id="@+id/boton3"
-            android:layout_width="103dp"
+            android:layout_width="222dp"
             android:layout_height="match_parent"
+	    android:layout_gravity="bottom|right" 
             android:text="@string/button3" />
 
         <Button
             android:id="@+id/boton4"
-            android:layout_width="103dp"
+            android:layout_width="222dp"
             android:layout_height="match_parent"
+	    android:layout_gravity="bottom|right" 
             android:text="@string/button4" />
 
     </LinearLayout>
@@ -47,6 +51,7 @@ android:orientation="vertical" >
         android:id="@+id/botonNext"
         android:layout_width="188dp"
         android:layout_height="wrap_content"
+	    android:layout_gravity="bottom|right" 
         android:text="@string/botonNext" />
 
-</LinearLayout>
+</FrameLayout>
