--- a/app/src/main/res/layout/activity_escola_vision.xml
+++ b/app/src/main/res/layout/activity_escola_vision.xml
@@ -19,27 +19,47 @@ android:orientation="vertical" >
 
         <Button
             android:id="@+id/boton1"
+            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="103dp"
             android:layout_height="match_parent"
-            android:text="@string/button1" />
+            android:background="@android:color/transparent"
+            android:minWidth="64dp"
+            android:minHeight="54dip"
+            android:text="@string/button1"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
 
         <Button
             android:id="@+id/boton2"
+            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="103dp"
             android:layout_height="match_parent"
-            android:text="@string/button2" />
+            android:background="@android:color/transparent"
+            android:minWidth="64dp"
+            android:minHeight="54dip"
+            android:text="@string/button2"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
 
         <Button
             android:id="@+id/boton3"
+            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="103dp"
             android:layout_height="match_parent"
-            android:text="@string/button3" />
+            android:background="@android:color/transparent"
+            android:minWidth="64dp"
+            android:minHeight="54dip"
+            android:text="@string/button3"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
 
         <Button
             android:id="@+id/boton4"
+            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="103dp"
             android:layout_height="match_parent"
-            android:text="@string/button4" />
+            android:background="@android:color/transparent"
+            android:minWidth="64dp"
+            android:minHeight="54dip"
+            android:text="@string/button4"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
 
     </LinearLayout>
 
