--- a/app/src/main/res/layout/activity_escola_vision.xml
+++ b/app/src/main/res/layout/activity_escola_vision.xml
@@ -1,8 +1,10 @@
+<?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:gravity="center"
-android:orientation="vertical" >
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/question_text_view"
@@ -53,7 +55,7 @@ android:orientation="vertical" >
         <Button
             android:id="@+id/boton4"
             style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="103dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:background="@android:color/transparent"
             android:minWidth="64dp"
