--- a/app/src/main/res/layout-land/activity_escola_vision.xml
+++ b/app/src/main/res/layout-land/activity_escola_vision.xml
@@ -24,27 +24,31 @@ android:layout_height="match_parent" >
             android:id="@+id/boton1"
             android:layout_width="222dp"
             android:layout_height="match_parent"
-	    android:layout_gravity="bottom|right"
+            android:layout_gravity="bottom|right"
+            android:background="@android:color/holo_red_light"
             android:text="@string/button1" />
 
         <Button
             android:id="@+id/boton2"
             android:layout_width="222dp"
             android:layout_height="match_parent"
+            android:background="@android:color/holo_orange_dark"
             android:text="@string/button2" />
 
         <Button
             android:id="@+id/boton3"
             android:layout_width="222dp"
             android:layout_height="match_parent"
-	    android:layout_gravity="bottom|right" 
+            android:layout_gravity="bottom|right"
+            android:background="@android:color/holo_orange_light"
             android:text="@string/button3" />
 
         <Button
             android:id="@+id/boton4"
             android:layout_width="222dp"
             android:layout_height="match_parent"
-	    android:layout_gravity="bottom|right" 
+            android:layout_gravity="bottom|right"
+            android:background="@android:color/holo_green_dark"
             android:text="@string/button4" />
 
     </LinearLayout>
@@ -53,7 +57,8 @@ android:layout_height="match_parent" >
         android:id="@+id/botonNext"
         android:layout_width="188dp"
         android:layout_height="wrap_content"
-	    android:layout_gravity="bottom|right" 
+        android:layout_gravity="bottom|right"
+        android:background="@color/verdeAgua"
         android:text="@string/botonNext" />
 
 </FrameLayout>
