--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="verdeAgua">#47ABB2</color>
+    <color name="fondo">#B0BFC1</color>
+    <color name="fondoInicio">#AED6F1</color>
 </resources>
