--- a/app/src/main/res/layout-land/activity_escola_vision.xml
+++ b/app/src/main/res/layout-land/activity_escola_vision.xml
@@ -1,55 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="match_parent"
-android:layout_height="match_parent" >
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/white"
+    android:gravity="center"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/question_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
         android:padding="24dp"
         android:text="@string/question_text_1"
-        android:textAlignment="center"
-        android:textSize="30sp" />
+        android:textColor="@color/black"
+        android:textSize="21sp" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-	android:layout_gravity="center_vertical|center_horizontal"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/boton1"
-            android:layout_width="222dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="bottom|right"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
             android:background="@android:color/holo_red_light"
-            android:text="@string/button1" />
+            android:clickable="true"
+            android:minWidth="64dp"
+            android:minHeight="54dip"
+            android:text="@string/button1"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
 
         <Button
             android:id="@+id/boton2"
-            android:layout_width="222dp"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@android:color/holo_orange_dark"
-            android:text="@string/button2" />
+            android:minWidth="64dp"
+            android:minHeight="54dip"
+            android:text="@string/button2"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
 
         <Button
             android:id="@+id/boton3"
-            android:layout_width="222dp"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="bottom|right"
             android:background="@android:color/holo_orange_light"
-            android:text="@string/button3" />
+            android:minWidth="64dp"
+            android:minHeight="54dip"
+            android:text="@string/button3"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
 
         <Button
             android:id="@+id/boton4"
-            android:layout_width="222dp"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="bottom|right"
             android:background="@android:color/holo_green_dark"
-            android:text="@string/button4" />
+            android:minWidth="64dp"
+            android:minHeight="54dip"
+            android:text="@string/button4"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
 
     </LinearLayout>
 
@@ -57,8 +72,8 @@ android:layout_height="match_parent" >
         android:id="@+id/botonNext"
         android:layout_width="188dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|right"
-        android:background="@color/verdeAgua"
-        android:text="@string/botonNext" />
+        android:backgroundTint="@color/verdeAgua"
+        android:text="@string/botonNext"
+        android:translationY="100px" />
 
-</FrameLayout>
+</LinearLayout>
