--- a/app/src/main/res/layout/activity_escola_vision.xml
+++ b/app/src/main/res/layout/activity_escola_vision.xml
@@ -3,7 +3,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    android:background="@android:color/transparent"
+    android:background="@color/white"
     android:gravity="center"
     android:orientation="vertical">
 
@@ -13,19 +13,23 @@
         android:layout_height="wrap_content"
         android:padding="24dp"
         android:text="@string/question_text_1"
+        android:textColor="@color/black"
         android:textSize="21sp" />
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="18dp"
+        android:layout_weight="0.5"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/boton1"
             style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="103dp"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="250dp"
+            android:layout_weight="1"
             android:background="@android:color/holo_red_light"
+            android:clickable="true"
             android:minWidth="64dp"
             android:minHeight="54dip"
             android:text="@string/button1"
@@ -34,8 +38,9 @@
         <Button
             android:id="@+id/boton2"
             style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="103dp"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="250dp"
+            android:layout_weight="1"
             android:background="@android:color/holo_orange_dark"
             android:minWidth="64dp"
             android:minHeight="54dip"
@@ -45,8 +50,9 @@
         <Button
             android:id="@+id/boton3"
             style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="103dp"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="250dp"
+            android:layout_weight="1"
             android:background="@android:color/holo_orange_light"
             android:minWidth="64dp"
             android:minHeight="54dip"
@@ -57,7 +63,8 @@
             android:id="@+id/boton4"
             style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="250dp"
+            android:layout_weight="1"
             android:background="@android:color/holo_green_dark"
             android:minWidth="64dp"
             android:minHeight="54dip"
@@ -66,11 +73,19 @@
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/botonNext"
-        android:layout_width="188dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/verdeAgua"
-        android:text="@string/botonNext" />
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/botonNext"
+            android:layout_width="188dp"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/verdeAgua"
+            android:text="@string/botonNext"
+            android:translationY="100px" />
+    </LinearLayout>
 
 </LinearLayout>
