--- a/app/src/main/res/layout-land/activity_escola_vision.xml
+++ b/app/src/main/res/layout-land/activity_escola_vision.xml
@@ -24,7 +24,7 @@
         <Button
             android:id="@+id/boton1"
             style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="match_parent"
+            android:layout_width="220dp"
             android:layout_height="100dp"
             android:background="@android:color/holo_red_light"
             android:clickable="true"
@@ -36,7 +36,7 @@
         <Button
             android:id="@+id/boton2"
             style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="match_parent"
+            android:layout_width="224dp"
             android:layout_height="match_parent"
             android:background="@android:color/holo_orange_dark"
             android:minWidth="64dp"
@@ -47,7 +47,7 @@
         <Button
             android:id="@+id/boton3"
             style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="match_parent"
+            android:layout_width="233dp"
             android:layout_height="match_parent"
             android:background="@android:color/holo_orange_light"
             android:minWidth="64dp"
