boton siguiente casi funcionando por si acaso

--- a/app/src/main/res/layout/activity_escola_vision.xml
+++ b/app/src/main/res/layout/activity_escola_vision.xml
@@ -18,8 +18,7 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="18dp"
-        android:layout_weight="0.5"
+        android:layout_height="269dp"
         android:orientation="horizontal">
 
         <Button
@@ -27,9 +26,10 @@
             style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="250dp"
-            android:layout_weight="1"
+            android:layout_weight="0.5"
             android:background="@android:color/holo_red_light"
             android:clickable="true"
+            android:gravity="center"
             android:minWidth="64dp"
             android:minHeight="54dip"
             android:text="@string/button1"
@@ -40,8 +40,9 @@
             style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="250dp"
-            android:layout_weight="1"
+            android:layout_weight="0.5"
             android:background="@android:color/holo_orange_dark"
+            android:gravity="center"
             android:minWidth="64dp"
             android:minHeight="54dip"
             android:text="@string/button2"
@@ -52,8 +53,9 @@
             style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="250dp"
-            android:layout_weight="1"
+            android:layout_weight="0.5"
             android:background="@android:color/holo_orange_light"
+            android:gravity="center"
             android:minWidth="64dp"
             android:minHeight="54dip"
             android:text="@string/button3"
@@ -63,9 +65,10 @@
             android:id="@+id/boton4"
             style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
-            android:layout_height="250dp"
-            android:layout_weight="1"
+            android:layout_height="237dp"
+            android:layout_weight="0.5"
             android:background="@android:color/holo_green_dark"
+            android:gravity="center"
             android:minWidth="64dp"
             android:minHeight="54dip"
             android:text="@string/button4"
