--- a/app/src/main/res/layout/inicio.xml
+++ b/app/src/main/res/layout/inicio.xml
@@ -13,20 +13,22 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="212dp"
-            android:layout_height="296dp"
-            tools:srcCompat="@tools:sample/avatars" />
+            android:layout_width="match_parent"
+            android:layout_height="387dp"
+            app:srcCompat="@mipmap/ic_icono_foreground" />
 
         <TextView
             android:id="@+id/textView"
-            android:layout_width="295dp"
+            android:layout_width="421dp"
             android:layout_height="92dp"
+            android:gravity="center"
             android:text="@string/app_name"
+            android:textAlignment="center"
             android:textSize="50dp" />
 
         <Button
             android:id="@+id/buttonInicio"
-            android:layout_width="185dp"
+            android:layout_width="match_parent"
             android:layout_height="63dp"
             android:background="@android:color/holo_blue_dark"
             android:text="Comenzar test" />
