--- a/app/src/main/res/layout/inicio.xml
+++ b/app/src/main/res/layout/inicio.xml
@@ -27,11 +27,13 @@
             android:textSize="50dp" />
 
         <Button
-            android:id="@+id/buttonInicio"
+            android:id="@+id/botonIrInicio"
             android:layout_width="match_parent"
             android:layout_height="63dp"
             android:background="@android:color/holo_blue_dark"
-            android:text="Comenzar test" />
+            android:onClick="irInicio"
+            android:text="Ir a Inicio" />
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
