--- a/app/src/main/res/layout/inicio.xml
+++ b/app/src/main/res/layout/inicio.xml
@@ -6,34 +6,39 @@
     android:layout_height="match_parent"
     android:background="@color/fondoInicio">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent" >
 
-        <ImageView
-            android:id="@+id/imageView"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="387dp"
-            app:srcCompat="@mipmap/ic_icono_foreground" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="421dp"
-            android:layout_height="92dp"
-            android:gravity="center"
-            android:text="@string/app_name"
-            android:textAlignment="center"
-            android:textSize="50dp" />
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="match_parent"
+                android:layout_height="387dp"
+                app:srcCompat="@mipmap/ic_icono_foreground" />
 
-        <Button
-            android:id="@+id/botonIrInicio"
-            android:layout_width="match_parent"
-            android:layout_height="63dp"
-            android:background="@android:color/holo_blue_dark"
-            android:onClick="irInicio"
-            android:text="Ir a Inicio" />
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/app_name"
+                android:textAlignment="center"
+                android:textSize="50dp" />
 
-    </LinearLayout>
+            <Button
+                android:id="@+id/botonIrInicio"
+                android:layout_width="match_parent"
+                android:layout_height="63dp"
+                android:background="@android:color/holo_blue_dark"
+                android:onClick="irInicio"
+                android:text="EMPEZAR TEST" />
+
+        </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
