--- a/app/src/main/res/layout/scrollview.xml
+++ b/app/src/main/res/layout/scrollview.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginStart="1dp"
@@ -21,6 +24,7 @@
         app:layout_constraintVertical_bias="1.0">
 
         <LinearLayout
+            android:id="@+id/buttonsLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
@@ -33,7 +37,7 @@
                 android:text="@string/question_text_1"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
-                android:textSize="24sp" />
+                android:textSize="20sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -42,22 +46,27 @@
 
                 <Button
                     android:id="@+id/button1"
+                    style="@style/recipesButton1"
                     android:layout_width="match_parent"
                     android:layout_height="103dp"
-                    android:layout_weight="1"
-                    android:background="@color/rojo"
-                    android:text="@string/button1" />
+                    android:layout_weight="1" />
 
                 <Button
                     android:id="@+id/button2"
+                    style="@style/recipesButton2"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:background="@color/naranja"
-                    android:text="@string/button2" />
+                    android:fontFamily="sans-serif"
+                    android:text="@string/button2"
+                    android:textColor="@android:color/white"
+                    android:textSize="12sp"
+                    android:textStyle="normal|bold" />
 
                 <Button
                     android:id="@+id/button3"
+                    style="@style/recipesButton3"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -66,6 +75,7 @@
 
                 <Button
                     android:id="@+id/button4"
+                    style="@style/recipesButton4"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -81,24 +91,31 @@
                 android:text="@string/question_text_2"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
-                android:textSize="24sp" />
+                android:textSize="20sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="103dp"
                 android:layout_weight="1"
                 android:orientation="horizontal">
 
                 <Button
                     android:id="@+id/button5"
+                    style="@style/recipesButton1"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_margin="0px"
                     android:layout_weight="1"
                     android:backgroundTint="@android:color/holo_red_light"
-                    android:text="@string/button1" />
+                    android:gravity="center"
+                    android:padding="5dp"
+                    android:tag="@string/button1"
+                    android:text="@string/button1"
+                    android:textSize="12sp" />
 
                 <Button
                     android:id="@+id/button6"
+                    style="@style/recipesButton2"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -107,6 +124,7 @@
 
                 <Button
                     android:id="@+id/button7"
+                    style="@style/recipesButton3"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -115,6 +133,7 @@
 
                 <Button
                     android:id="@+id/button8"
+                    style="@style/recipesButton4"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -130,24 +149,27 @@
                 android:text="@string/question_text_3"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
-                android:textSize="24sp" />
+                android:textSize="20sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="103dp"
                 android:layout_weight="1"
                 android:orientation="horizontal">
 
                 <Button
                     android:id="@+id/button9"
+                    style="@style/recipesButton1"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:backgroundTint="@android:color/holo_red_light"
+                    android:padding="5dp"
                     android:text="@string/button1" />
 
                 <Button
                     android:id="@+id/button10"
+                    style="@style/recipesButton2"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -156,6 +178,7 @@
 
                 <Button
                     android:id="@+id/button11"
+                    style="@style/recipesButton3"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -164,6 +187,7 @@
 
                 <Button
                     android:id="@+id/button12"
+                    style="@style/recipesButton4"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -180,24 +204,25 @@
                 android:text="@string/question_text_4"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
-                android:textSize="24sp" />
+                android:textSize="20sp" />
 
             <LinearLayout
+                style="@style/recipesLayout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="103dp"
                 android:layout_weight="1"
                 android:orientation="horizontal">
 
                 <Button
                     android:id="@+id/button13"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    style="@style/recipesButton1"
                     android:layout_weight="1"
                     android:backgroundTint="@color/rojo"
                     android:text="@string/button1" />
 
                 <Button
                     android:id="@+id/button14"
+                    style="@style/recipesButton2"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -206,6 +231,7 @@
 
                 <Button
                     android:id="@+id/button15"
+                    style="@style/recipesButton3"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -214,6 +240,7 @@
 
                 <Button
                     android:id="@+id/button16"
+                    style="@style/recipesButton3"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -229,24 +256,25 @@
                 android:text="@string/question_text_5"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
-                android:textSize="24sp" />
+                android:textSize="20sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="103dp"
                 android:layout_weight="1"
                 android:orientation="horizontal">
 
                 <Button
                     android:id="@+id/button17"
+                    style="@style/recipesButton1"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:backgroundTint="@color/rojo"
                     android:text="@string/button1" />
 
                 <Button
                     android:id="@+id/button18"
+                    style="@style/recipesButton2"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -255,6 +283,7 @@
 
                 <Button
                     android:id="@+id/button19"
+                    style="@style/recipesButton3"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -263,6 +292,7 @@
 
                 <Button
                     android:id="@+id/button20"
+                    style="@style/recipesButton4"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -278,24 +308,25 @@
                 android:text="@string/question_text_6"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
-                android:textSize="24sp" />
+                android:textSize="20sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="103dp"
                 android:layout_weight="1"
                 android:orientation="horizontal">
 
                 <Button
                     android:id="@+id/button21"
+                    style="@style/recipesButton1"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:backgroundTint="@color/rojo"
                     android:text="@string/button1" />
 
                 <Button
                     android:id="@+id/button22"
+                    style="@style/recipesButton2"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -304,6 +335,7 @@
 
                 <Button
                     android:id="@+id/button23"
+                    style="@style/recipesButton3"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -312,6 +344,7 @@
 
                 <Button
                     android:id="@+id/button24"
+                    style="@style/recipesButton4"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -328,24 +361,25 @@
                 android:text="@string/question_text_7"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
-                android:textSize="24sp" />
+                android:textSize="20sp" />
 
             <LinearLayout
+                style="@style/recipesLayout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:orientation="horizontal">
 
                 <Button
                     android:id="@+id/button25"
+                    style="@style/recipesButton1"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:backgroundTint="@color/rojo"
                     android:text="@string/button1" />
 
                 <Button
                     android:id="@+id/button26"
+                    style="@style/recipesButton2"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -354,6 +388,7 @@
 
                 <Button
                     android:id="@+id/button27"
+                    style="@style/recipesButton3"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -362,6 +397,7 @@
 
                 <Button
                     android:id="@+id/button28"
+                    style="@style/recipesButton4"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -372,30 +408,31 @@
 
             <TextView
                 android:id="@+id/textView8"
+                style="@style/recipesTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/question_text_8"
                 android:textAlignment="center"
-                android:textColor="@android:color/black"
-                android:textSize="24sp" />
+                android:textColor="@android:color/black" />
 
             <LinearLayout
+                style="@style/recipesLayout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:orientation="horizontal">
 
                 <Button
                     android:id="@+id/button29"
+                    style="@style/recipesButton1"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:backgroundTint="@color/rojo"
                     android:text="@string/button1" />
 
                 <Button
                     android:id="@+id/button30"
+                    style="@style/recipesButton2"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -404,6 +441,7 @@
 
                 <Button
                     android:id="@+id/button31"
+                    style="@style/recipesButton3"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -412,6 +450,7 @@
 
                 <Button
                     android:id="@+id/button32"
+                    style="@style/recipesButton4"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -427,7 +466,43 @@
                 android:text="@string/question_text_9"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
-                android:textSize="24sp" />
+                android:textSize="20sp" />
+
+            <LinearLayout
+                style="@style/recipesLayout"
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/button"
+                    style="@style/recipesButton1"
+                    android:layout_width="match_parent"
+                    android:layout_weight="1" />
+
+                <Button
+                    android:id="@+id/button33"
+                    style="@style/recipesButton2"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1" />
+
+                <Button
+                    android:id="@+id/button34"
+                    style="@style/recipesButton3"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1" />
+
+                <Button
+                    android:id="@+id/button35"
+                    style="@style/recipesButton4"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="@string/button4"
+                    android:textAlignment="viewStart" />
+            </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
