--- a/app/src/main/res/layout/inicio.xml
+++ b/app/src/main/res/layout/inicio.xml
@@ -8,7 +8,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -18,17 +18,31 @@
             <ImageView
                 android:id="@+id/imageView"
                 android:layout_width="match_parent"
-                android:layout_height="387dp"
-                app:srcCompat="@mipmap/ic_icono_foreground" />
+                android:layout_height="336dp"
+                app:srcCompat="@mipmap/ic_icono_oficial_2_round" />
 
             <TextView
                 android:id="@+id/textView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/archivo_black"
                 android:gravity="center"
                 android:text="@string/app_name"
                 android:textAlignment="center"
+                android:textColor="@android:color/black"
                 android:textSize="50dp" />
+
+            <TextView
+                android:id="@+id/textView64"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/cabin"
+                android:paddingBottom="30dp"
+                android:text="orienta tus sueños"
+                android:textAlignment="center"
+                android:textColor="@color/verdeAgua"
+                android:textSize="34sp"
+                android:textStyle="bold" />
 
             <Button
                 android:id="@+id/botonIrInicio"
