--- a/app/src/main/res/layout/resultados.xml
+++ b/app/src/main/res/layout/resultados.xml
@@ -9,13 +9,18 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:textAlignment="center">
 
         <TextView
             android:id="@+id/resultadosint"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:layout_height="146dp"
+            android:background="@color/black"
+            android:text=""
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="60sp" />
     </LinearLayout>
 
 
