intento de sumas pero sigue sin salir al sumar tres suma 18 y se pone en todas las areas

--- a/app/src/main/res/layout/resultados.xml
+++ b/app/src/main/res/layout/resultados.xml
@@ -23,6 +23,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:background="@android:color/holo_green_light"
                 android:text="Área 1 :"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
@@ -50,6 +51,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:background="@android:color/holo_green_light"
                 android:text="Área 2 :"
                 android:textAlignment="center"
                 android:textColor="@color/black"
@@ -77,6 +79,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:background="@android:color/holo_green_light"
                 android:text="Área 3 :"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
@@ -103,6 +106,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:background="@android:color/holo_green_light"
                 android:text="Área 4 :"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
@@ -128,6 +132,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:background="@android:color/holo_green_light"
                 android:text="Área 5 :"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
