--- a/app/src/main/res/drawable/button_azul_bg.xml
+++ b/app/src/main/res/drawable/button_azul_bg.xml
@@ -8,7 +8,7 @@
     </item>
     <item android:left="5dp" android:right="5dp" android:top="5dp" android:bottom="5dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/verde" />
+            <solid android:color="@color/azul" />
         </shape>
     </item>
 </layer-list>
