--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -41,7 +41,7 @@
     </style>
 
     <style name="recipesButton4" parent="TextAppearance.AppCompat.Widget.Button">
-        <item name="android:background">@color/verde</item>
+        <item name="android:background">@color/azul</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_weight">1</item>
