--- a/app/src/main/res/layout/inicio.xml
+++ b/app/src/main/res/layout/inicio.xml
@@ -37,7 +37,7 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/textView70"
+                        android:id="@+id/area4"
                         android:layout_width="match_parent"
                         android:layout_height="69dp"
                         android:layout_weight="1"
